# pp-syndication-api/src/main/resources/openapispec.yaml
@@ -7,6 +7,8 @@ servers:
 tags:
   - name: Documents
     description: Operations related to documents
+  - name: Rules
+    description: Operations related to document rules
 paths:
   /documents:
     get:
@@ -25,6 +27,45 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/PagedDocumentApiDto'
+  /rules:
+    get:
+      tags:
+        - Rules
+      summary: Get all rules
+      operationId: getRules
+      parameters:
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/size'
+        - $ref: '#/components/parameters/sort'
+      responses:
+        '200':
+          description: A list of rules
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PagedRuleApiDto'
+  /rules/{id}:
+    get:
+      tags:
+        - Rules
+      summary: Get rule by ID
+      operationId: getRuleById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: Rule found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RuleApiDto'
+        '404':
+          description: Rule not found
 components:
   schemas:
     DocumentApiDto:
@@ -49,6 +90,16 @@ components:
         documentLastUpdatedAt:
           type: string
           format: date-time
+    RuleApiDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        name:
+          type: string
+        description:
+          type: string
     PagedDocumentApiDto:
       type: object
       properties:
@@ -56,6 +107,15 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/DocumentApiDto'
+        pageInfo:
+          $ref: '#/components/schemas/PageInfo'
+    PagedRuleApiDto:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/RuleApiDto'
         pageInfo:
           $ref: '#/components/schemas/PageInfo'
     PageInfo:
